--- a/Dockerfile1
+++ b/Dockerfile1
@@ -5,7 +5,7 @@ FROM tomcat:9-alpine
 WORKDIR /usr/local/tomcat
 
 # Copy the WAR file from the Jenkins workspace
-COPY target/java-web-app*.war /usr/local/tomcat/webapps/java-web-app*.war
+COPY target/java-web-app*.war /usr/local/tomcat/webapps/java-web-app.war
 
 # Create a non-root user and changing user and group of working directory
 RUN adduser -D tomcat && chown -R tomcat:tomcat /usr/local/tomcat
