--- a/Dockerfile1
+++ b/Dockerfile1
@@ -2,10 +2,11 @@
 FROM tomcat:9-alpine
 
 # Set the working directory to the Tomcat webapps directory
-WORKDIR /usr/local/tomcat
+ENV WORK_DIR /usr/local/tomcat
+WORKDIR $WORK_DIR
 
 # Copy the WAR file from the Jenkins workspace
-COPY target/java-web-app*.war /usr/local/tomcat/webapps/java-web-app.war
+COPY target/java-web-app*.war $WORK_DIR/webapps/java-web-app.war
 
 # Create a non-root user and changing user and group of working directory
 RUN adduser -D tomcat && chown -R tomcat:tomcat /usr/local/tomcat
